backend/broPayCRM/force-app/main/default/objects/Payment_Record__c/Payment_Record__c.object-meta.xml
<CustomObject>
    <description>Captures payment transaction details from Stripe/PayPal.</description>
    <label>Payment Record</label>
    <nameField>
        <displayFormat>PAY-{0000}</displayFormat>
        <label>Payment Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>