backend/broPayCRM/force-app/main/default/objects/Payment_Record__c/fields/Expense_Split__c.field-meta.xml
<CustomField>
    <fullName>Expense_Split__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Which share this payment</description>
    <label>Expense Split</label>
    <referenceTo>Expense_Split__c</referenceTo>
    <relationshipLabel>Payment Records</relationshipLabel>
    <relationshipName>Payment_Records</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>