backend/broPayCRM/force-app/main/default/objects/Payment_Record__c/fields/Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Paid_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who made the payment</description>
    <label>Paid By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payment_Records</relationshipName>
    <type>Lookup</type>
</CustomField>